--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,10 @@
 		<maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
 		<frontend-maven-plugin.version>1.11.0</frontend-maven-plugin.version>
 		<!-- dependency versions -->
-		<junit.version>5.7.1</junit.version>
-		<wicket.version>9.4.0</wicket.version>
+		<junit.version>5.8.0-M1</junit.version>
+		<wicket.version>9.5.0-SNAPSHOT</wicket.version>
 		<wicket-jquery-ui.version>9.3.2</wicket-jquery-ui.version>
-		<wicketstuff.version>9.4.0</wicketstuff.version>
+		<wicketstuff.version>9.5.0-SNAPSHOT</wicketstuff.version>
 		<wicket-bootstrap.version>5.0.5</wicket-bootstrap.version>
 		<font-awesome.version>5.15.3</font-awesome.version>
 		<spring.version>5.3.9</spring.version>
@@ -126,6 +126,7 @@
 		<jain-sip.version>1.2.307</jain-sip.version><!-- other versions are broken! -->
 		<jasny-bootstrap.version>3.1.3-2</jasny-bootstrap.version>
 		<jodconverter.version>4.4.2</jodconverter.version>
+		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
 		<!--  Exclude all generated code  -->
 		<sonar.exclusions>file:**/generated-sources/**, file:**/jquery-ui.css, file:**/cssemoticons.js, file:**/bootstrap-confirmation.js</sonar.exclusions>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -616,9 +617,19 @@
 				</exclusions>
 			</dependency>
 			<dependency>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-datastore-hazelcast</artifactId>
+				<version>${wicketstuff.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.googlecode.wicket-jquery-ui</groupId>
+				<artifactId>wicket-jquery-ui-calendar</artifactId>
+				<version>${wicket-jquery-ui.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
-				<version>3.1.0</version>
+				<version>${javax.servlet-api.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -880,6 +891,7 @@
 					<encoding>UTF-8</encoding>
 					<consoleOutput>true</consoleOutput>
 					<failsOnError>true</failsOnError>
+					<excludes>**/module-info.java,**/module-info.test</excludes>
 				</configuration>
 				<executions>
 					<execution>
